--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shoham Mallick || Apple Clone</title>
     <link rel="shortcut icon" href="./images/png-apple-logo-9711.png" type="image/svg+xml">
+    <link rel="manifest" href="./manifest.json">
+<meta name="theme-color" content="#000000">
+
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -190,5 +193,14 @@
       })
 
     </script>
+
+    <script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('./sw.js')
+      .then(() => console.log('Service Worker registered'))
+      .catch(err => console.log('Service Worker registration failed:', err));
+  }
+</script>
+
 </body>
 </html>
