--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shoham Mallick || Apple Clone</title>
-    <link rel="shortcut icon" href="./images/png-apple-logo-9711.png" type="image/svg+xml">
+    <link rel="shortcut icon" href="./images/a.png" type="image/svg+xml">
     <link rel="manifest" href="./manifest.json">
 <meta name="theme-color" content="#000000">
 
